--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -416,6 +416,9 @@ template {
   }
   .badge {
     border: 1px solid #000;
+    
+      font-size: large;
+  
   }
   .table {
     border-collapse: collapse !important;
@@ -5379,7 +5382,7 @@ button.close {
 .badge {
   display: inline-block;
   padding: 0.25em 0.4em;
-  font-size: 75%;
+  
   font-weight: 500;
   line-height: 1;
   text-align: center;
